# compiler

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  vcpkg.json
include/: code_generator.hpp  functions.hpp  hash.hpp  scope.hpp  semantic_analyzer.hpp  tree.hpp
include/type/: anon_struct_type.hpp  array_type.hpp  function_type.hpp  registry.hpp  struct_type.hpp  type.hpp  type_id.hpp
include/types/: anon_struct_type.hpp  registry.hpp  type.hpp  type_id.hpp
src/: code_generator.cpp  default_binaries.cpp  default_casts.cpp  functions.cpp  main.cpp  scope.cpp  semantic_analyzer.cpp  tree.cpp
src/type/: registry.cpp
src/types/: registry.cpp
